<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/you_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Введите_Ваше_имя"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/Топинги" />

        <CheckBox
            android:id="@+id/whipped_cream"
            style="@style/NewCheckBoxStyle"
            android:text="@string/Взбитые_сливки" />

        <CheckBox
            android:id="@+id/sugar"
            style="@style/NewCheckBoxStyle"
            android:text="@string/Сахар" />

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="10dp"
            android:text="@string/Количество" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="@style/NewButtonStyle"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/HeaderTextStyle"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0" />

            <Button
                style="@style/NewButtonStyle"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="10dp"
            android:text="@string/Состав_заказа" />

        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textAllCaps="false" />

        <Button
            style="@style/NewButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="submitOrder"
            android:text="@string/Заказать" />


    </LinearLayout>

</ScrollView>